# ideababy_stroller

./: .claudeignore  .env.example  .gitignore  .worktreeinclude  AGENTS.md  CLAUDE.md  CLAUDE1.md  PLAYBOOK.md  README.md  XENODEV-WORKFLOW.md  _002-Opus47Max-final.md  biome.json  drizzle.config.ts  install.sh  lessons-learned.md  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
projects/003-pA/: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements-locked.txt
projects/003-pA/demo/gsm8k-100-qwen3-4b/: expected_metrics.md  rehearsal_script.sh  run_config.yaml  scenario.md
projects/003-pA/docs/: demo-artifact-checklist.md  demo-reproduction.md  dependency-policy.md  h200-rsync-playbook.md
projects/003-pA/pars/: __init__.py  logging.py  paths.py
projects/003-pA/pars/budget/: __init__.py  tracker.py
projects/003-pA/pars/cli/: __init__.py  _common.py  compare.py  main.py  resume.py  retry.py  start.py  status.py
projects/003-pA/pars/compare/: __init__.py  engine.py
projects/003-pA/pars/ledger/: __init__.py  config_io.py  config_schema.py  ledger.py  metrics.py  run_id.py  state.py
projects/003-pA/pars/orch/: __init__.py  env_snapshot.py  machine_fingerprint.py  orchestrator.py  resume.py  retry.py  stream_parser.py  worker.py  worker_env.py  worktree.py
projects/003-pA/pars/proxy/: __init__.py  audit_log.py  budget_estimator.py  config.py  prereject_middleware.py  server.py
projects/003-pA/pars/report/: __init__.py  charts.py  failure_prompt.py  failure_schema.py  renderer.py  schema_validator.py
projects/003-pA/pars/safety/: __init__.py  integrity.py  pip_policy.py  readonly_mount.py
projects/003-pA/pars/stuck/: __init__.py  monitor.py  probes.py  state_machine.py  stuck_lock.py
projects/003-pA/pars/workflow/: __init__.py  render.py
projects/003-pA/scripts/: lock-deps.sh
projects/003-pA/templates/: baseline_script.py.j2  eval_script.py.j2  lora_script.py.j2  report.md.j2
projects/003-pA/templates/prompts/: worker_system_prompt.md.j2
projects/003-pA/tests/: __init__.py  conftest.py
projects/003-pA/tests/e2e/: __init__.py  conftest.py  test_o1_end_to_end_week.py  test_o2_report_schema.py  test_o3_resume.py  test_o6_compare.py  test_o7_stuck.py
projects/003-pA/tests/e2e/fixtures/: tiny_run_config.yaml
projects/003-pA/tests/fixtures/stuck_testcases/: README.md  scene1_lora_60min.jsonl  scene2_pip_slow_download.jsonl  scene3_deadlock.jsonl  scene4_cold_start_deadlock.jsonl  scene5_boundary_29s.jsonl  scene6_boundary_30s.jsonl  scene7_training_idle_59s.jsonl  scene8_disk_suppression.jsonl
projects/003-pA/tests/integration/: __init__.py  test_budget_sigint_on_cap.py  test_claude_dir_readonly.py  test_compare_two_runs.py  test_deny_dangerous_commands.py  test_pip_install_deny_unlocked.py  test_proxy_localhost_only.py  test_proxy_prerejects_on_budget.py  test_report_end_to_end.py  test_resume_after_kill.py  test_retry_from_run.py  test_sft_start_happy_path.py  test_stuck_no_false_positive_during_lora_epoch.py  test_stuck_restart_circuit_breaker.py  test_tinyllama_smoke.py  test_worker_cannot_write_claude_dir.py  test_worker_lifecycle.py
projects/003-pA/tests/unit/: __init__.py  test_budget_estimator.py  test_budget_tracker.py  test_cli_smoke.py  test_cli_status.py  test_compare_engine.py  test_config_schema.py  test_env_snapshot.py  test_failure_schema.py  test_integrity.py  test_ledger.py  test_machine_fingerprint.py  test_metrics.py  test_orchestrator_error_paths.py  test_paths.py  test_pip_policy.py  test_proxy_config.py  test_report_schema_validator.py  test_retry_config_diff.py  test_run_id.py  test_start_cli.py  test_state.py  test_stuck_lock.py  test_stuck_probes.py  test_stuck_state_machine.py  test_template_render.py  test_worker_env.py  test_worktree.py
projects/003-pA/worker_claude_dir/: CLAUDE.md  settings.json
projects/003-pA/worker_claude_dir/hooks/: pre_pip_install.sh  pre_tool_use.sh
projects/004-pB/: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
projects/004-pB/.github/workflows/: ci.yml
projects/004-pB/alembic/: env.py  script.py.mako
projects/004-pB/alembic/versions/: 0001_initial_schema.py  0002_tab_open_log.py  0003_notes_fts.py  0004_weekly_maintenance.py  0005_telegram_pushes.py  0006_learning_quarters.py  0007_onboarding_state.py
projects/004-pB/docs/: known-issues-v0.1.md  learning_checklist.yaml  runbook.md  v0.1-ship-summary.md
projects/004-pB/docs/prompts/: README.md  advisor_parser_v1.md  advisor_strategy_v1.md  agent_synthesis_v1.md  conflict_assembler_v1.md  devil_advocate_v1.md  grade_learning_v1.md  weekly_review_v1.md
projects/004-pB/docs/runbook/: b_lite.md  o5_press_test.md
projects/004-pB/scripts/: __init__.py  check_secrets.py  grade_learning.py  learning_check.py  manual_press_test.py  proxyman_fetch.sh  start.sh  toggle_b_lite.py
projects/004-pB/src/decision_ledger/: __init__.py  config.py  main.py  plugin.py
projects/004-pB/src/decision_ledger/domain/: __init__.py  advisor.py  alert.py  conflict_report.py  decision.py  decision_draft.py  env_snapshot.py  llm_usage.py  note.py  portfolio.py  rebuttal.py  strategy_signal.py
projects/004-pB/src/decision_ledger/llm/: __init__.py  cache.py  client.py  errors.py  retry.py  usage.py
projects/004-pB/src/decision_ledger/monitor/: __init__.py  failure_alert.py  pause_pipeline.py  risk_dashboard.py  tab_metrics.py
projects/004-pB/src/decision_ledger/pipeline/: __init__.py  parser.py  pdf_extractor.py  watcher.py
projects/004-pB/src/decision_ledger/repository/: __init__.py  (+11 more)
projects/004-pB/tests/: conftest.py
projects/004-pB/tests/e2e/: conftest.py  e2e_app_factory.py  test_decision_input_timing.py  test_first_screen_latency.py  test_onboarding.py
projects/004-pB/tests/integration/: __init__.py  test_db_path_unification.py  test_main_app_route_snapshot.py  test_scheduler.py  test_telegram_cadence.py
projects/004-pB/tests/unit/: test_config.py  test_main_v01_banner.py  test_smoke.py
(+1083 files in other folders)
