[project]
name = "recallkit"
version = "0.1.0.dev0"
description = "单人后训练决策循环工具 — CLI 驱动的 LoRA SFT + eval + 决策报告"
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

# 运行时依赖（T002 填入 · R5 供应链缓解 · C17 依赖白名单）
# 策略：全部 exact pin(==x.y.z)，与 requirements-locked.txt + uv.lock 三重保证供应链安全
# 版本选择依据：以 Unsloth 2026.3.18 实际 PyPI requires_dist 为准；spec §8 版本表仅供参考
# transformers: Unsloth 要求 >=4.51.3，排除多个高版本；选最低满足版本以减少变量
# peft:         Unsloth 要求 >=0.18.0,!=0.11.0；选 0.19.1（含重要修复）
# trl:          Unsloth 要求 >=0.18.2,!=0.19.0,<=0.24.0；选最低满足版
# bitsandbytes: Unsloth 要求 >=0.45.5,!=0.46.0,!=0.48.0；0.49.2 同时有 linux+macOS wheel
#               Linux/CUDA-only 运行时依赖，加 PEP 508 marker 排除 macOS dev 环境（ops-decision T002）
# unsloth:      依赖 triton（Linux-only），加 marker 确保 macOS uv lock/sync 可正常运行（ops-decision T002）
# 跨平台依赖（macOS arm64 + Linux x86_64 均可装）：
#   typer, rich, pydantic, pyyaml, httpx, psutil, ulid-py, lm-eval, datasets, jinja2, deepdiff, litellm, matplotlib
dependencies = [
    # === Linux/CUDA-only 训练依赖（PEP 508 platform marker） ===
    "unsloth==2026.3.18; sys_platform == 'linux'",
    "transformers==4.51.3; sys_platform == 'linux'",
    "peft==0.19.1; sys_platform == 'linux'",
    "trl==0.18.2; sys_platform == 'linux'",
    "accelerate==0.34.2; sys_platform == 'linux'",
    "bitsandbytes==0.49.2; sys_platform == 'linux'",
    # === 跨平台依赖（dev + prod 均装） ===
    "datasets==3.6.0",
    "lm-eval==0.4.5",
    "typer==0.12.5",
    "click>=8.1,<8.2",  # typer 0.12.5 兼容性：click 8.2+ 改变 make_metavar() 签名导致 rich help 渲染崩溃
    "rich==13.7.1",
    "jinja2==3.1.6",
    "deepdiff==7.0.1",
    "psutil==5.9.8",
    "litellm==1.50.4",
    "ulid-py==1.1.0",
    "pyyaml==6.0.3",
    "matplotlib==3.9.4",
]

[project.optional-dependencies]
# 开发依赖（T002 填入 · 版本允许小版本更新，非供应链敏感路径）
dev = [
    "ruff>=0.5",
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "pre-commit>=3.7",
    "pip-audit>=2.7",
    "pip-licenses>=4.5",
]

[project.scripts]
# CLI 入口：pars.cli.main:cli 为预构建的 click Group（含 --version 注入）
# 注意：不用 app（Typer 实例），因为 --version 是通过 click Group 注入的（绕过 Typer 0.12 is_eager bug）
pars = "pars.cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pars"]

[tool.uv]
# 平台 lock 策略（T002 · R5 供应链 · C17 · ops-decision 2026-04-24）：
# - Linux x86_64：完整训练环境（unsloth + bitsandbytes + triton 等）
# - macOS arm64：仅跨平台依赖（lm-eval, CLI 工具等），Linux-only 依赖通过 PEP 508 marker 跳过
# - triton 在 Unsloth 依赖中已有 sys_platform == 'linux' marker，此处与之对齐
# - uv.lock 为 universal lock，同时覆盖两个平台；requirements-locked.txt 仅 linux（R5 防御对象）
environments = [
    "sys_platform == 'linux' and python_version >= '3.12' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and python_version >= '3.12' and platform_machine == 'arm64'",
]

# 说明：ruff、pytest、coverage 配置由 T003 添加（见下方 [tool.*] 段）

# =============================================================================
# T003: ruff 配置（lint + format）
# =============================================================================

[tool.ruff]
# 行宽限制，与 T003 spec 对齐
line-length = 100
# 目标 Python 版本
target-version = "py312"
# 排除生成/临时目录，避免误扫
exclude = [
    "runs/",
    "checkpoints/",
    ".worktrees/",
    "worker_claude_dir/",
    "__pycache__",
    ".git",
    ".venv",
    "dist",
]
# 源码目录（影响 import 排序的 src 布局感知）
src = ["pars", "tests"]

[tool.ruff.lint]
# 规则集：
#   E/W  — pycodestyle
#   F    — pyflakes
#   I    — isort
#   B    — flake8-bugbear
#   UP   — pyupgrade
#   S    — flake8-bandit（安全）
#   PL   — pylint
#   RUF  — ruff 自有规则（部分 Chinese 相关规则 ignore，见下）
#   N    — pep8-naming
#   ANN  — flake8-annotations（类型注解检查）
select = ["E", "F", "I", "B", "UP", "S", "PL", "RUF", "N", "ANN"]
ignore = [
    # ANN401: 允许 Any 作为类型（dict[str, Any] 是常见合法用法）
    "ANN401",
    # PLC0415: 允许函数内 import（test_paths.py 里有延迟 import 模式）
    "PLC0415",
    # PLR2004: magic number 比较在测试中合理（如 assert result == 24576）
    "PLR2004",
    # PLR0913: 参数太多（部分业务函数参数超过 5 个是合理的）
    "PLR0913",
    # PLW0603: global 语句（pars/logging.py 使用 global _ROOT_CONFIGURED，T004 产物）
    "PLW0603",
    # RUF001/RUF002/RUF003: 中文全角标点检测（本项目注释/docstring/字符串使用中文，属于误报）
    # T004/T005 产物下大量中文字符串和注释会触发此规则；不修改存量代码，此处全局 ignore
    "RUF001", "RUF002", "RUF003",
]

[tool.ruff.lint.per-file-ignores]
# ------- tests/ 目录 -------
# S101: 允许 assert（pytest 惯用法）
# ANN: 测试函数不强制类型注解
# S603/S607: subprocess 调用（测试中合理）
# S108: /tmp 路径（测试隔离用途合理）
# I001: import 排序（T004/T005 存量测试文件）
# F401: 未使用 import（T004 存量测试文件）
# E501: 行太长（T005 存量测试文件个别长行）
# RUF100: 多余 noqa 指令（T005 存量文件）
# PLR0913/PLR0912: pylint 规则
# UP045: Optional[X] 改 X | None（T005 存量文件）
"tests/**/*.py" = [
    "S101", "ANN", "S603", "S607", "S108",
    "I001", "F401", "E501", "RUF100",
    "PLR0913", "PLR0912",
    "UP045",
]
# ------- pars/ 源码目录 -------
# 以下均为 T004 产物的存量问题，不在 T003 改动范围内
# I001: import 排序（pars/logging.py / pars/paths.py）
# F401: 未使用 import（pars/logging.py 的 traceback）
# UP017: datetime.UTC 别名（pars/logging.py）
# UP045: Optional[X] 改 X | None（pars/cli/main.py）
# S607: subprocess partial path（pars/paths.py 中 git 命令）
# S603: subprocess call（pars/paths.py）
# N: 命名规范（pars/logging.py 中 _JsonFormatter 等私有类）
"pars/**/*.py" = ["I001", "F401", "UP017", "UP045", "S607", "S603", "N801", "N802", "N803", "RUF100"]
# __init__.py 空文件允许无 docstring，且通常无公开 API 不需要注解
"pars/**/__init__.py" = ["D104", "ANN"]

[tool.ruff.format]
# 使用双引号（Python 社区默认）
quote-style = "double"
# 缩进风格：空格
indent-style = "space"
# 行结尾：auto
line-ending = "auto"

# =============================================================================
# T003: pytest 配置
# =============================================================================

[tool.pytest.ini_options]
# 测试目录
testpaths = ["tests"]
# 测试文件模式
python_files = ["test_*.py"]
# pytest 运行参数：
#   -ra         — 显示所有非通过的测试摘要
#   -q          — 简洁输出
#   --strict-markers — 未注册 marker 报错
#   --strict-config  — 配置错误报错（防误用）
# 注意：--cov-fail-under=70 在此处不启用（避免 Phase 0 阶段 pytest 普遍失败）
#       CI 中通过 `pytest --cov=pars --cov-fail-under=70` 显式传入
addopts = "-ra -q --strict-markers --strict-config"
# 自定义 marker 注册（未注册的 marker 在 --strict-markers 下会报错）
markers = [
    "unit: 单元测试（不依赖外部服务/文件系统）",
    "integration: 集成测试（需要文件系统或 subprocess）",
    "e2e: 端到端测试（需要完整环境，包括 CLI）",
    "slow: 运行超过 10s 的慢测试",
    "requires_gpu: 需要 NVIDIA GPU 和 CUDA 才能运行",
    "gpu: 需要 NVIDIA GPU（e2e 真实 run 标记，等同 requires_gpu）",
]
# 将 warning 升级为 error，从 Phase 0 开始保持严格
filterwarnings = [
    "error",
    # 排除 pytest 自身的 PytestUnraisableExceptionWarning（极少数情况）
    "ignore::pytest.PytestUnraisableExceptionWarning",
    # T021: matplotlib 3.9.4 + pyparsing 3.3.2 兼容性问题
    # pyparsing 3.3.2 将 oneOf 重命名为 one_of，但 matplotlib _fontconfig_pattern 仍用 oneOf
    # 此 warning 来自第三方依赖，不影响功能正确性
    "ignore::pyparsing.warnings.PyparsingDeprecationWarning",
]

# =============================================================================
# T003: coverage 配置
# =============================================================================

[tool.coverage.run]
# 覆盖率数据源：仅 pars 包（不含 tests 和工具）
source = ["pars"]
# 开启分支覆盖率（条件分支覆盖，比行覆盖更严格）
branch = true
# 排除不需要统计的文件
omit = [
    "pars/**/__init__.py",
    "tests/*",
    "tests/**/*",
]

[tool.coverage.report]
# 低于此阈值时报告标红（不自动 fail，fail-under 在 CI 命令里显式传入）
fail_under = 70
# 报告中显示缺失的行号
show_missing = true
# 排除特定代码行的统计（如类型忽略注释行）
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
