[project]
name = "decision-ledger"
version = "0.1.0"
description = "ML PhD 自用投资决策档案系统 — calibration engine first"
readme = "README.md"
requires-python = "==3.12.*"
# 注意: requires-python 必须 match 3.12.x 系列（.python-version 钉 3.12.7）
# tech-stack.md §3.5: 不允许 3.13，不允许 < 3.12

dependencies = [
    # ── Web 框架 ──────────────────────────────────────────
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "jinja2==3.1.4",
    # ── 数据校验 ──────────────────────────────────────────
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    # ── 数据库 ────────────────────────────────────────────
    "aiosqlite==0.20.0",
    "alembic==1.14.0",
    # ── LLM SDK ──────────────────────────────────────────
    "anthropic==0.42.0",
    # ── Telegram bot ─────────────────────────────────────
    "python-telegram-bot==21.9",
    # ── 文件监听 ──────────────────────────────────────────
    "watchdog==6.0.0",
    # ── 任务调度 ──────────────────────────────────────────
    "apscheduler==3.11.0",
    # ── PDF 解析 ──────────────────────────────────────────
    "pdfplumber==0.11.4",
    # ── Async 工具 ────────────────────────────────────────
    "anyio==4.6.2",
    "python-multipart>=0.0.26",
]

[project.optional-dependencies]
dev = [
    # ── 测试 ─────────────────────────────────────────────
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
    # ── E2E 测试 ─────────────────────────────────────────
    "playwright==1.49.0",
    # ── HTTP mock ────────────────────────────────────────
    "respx==0.21.1",
    # ── Fixture 工厂 ─────────────────────────────────────
    "factory-boy==3.3.1",
    # ── Lint / Type ──────────────────────────────────────
    "ruff==0.8.4",
    "mypy==1.13.0",
    # ── pre-commit ────────────────────────────────────────
    "pre-commit==4.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/decision_ledger"]

# ── ruff ─────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "PLC",  # pylint convention
    "RUF",  # ruff-specific
]
ignore = [
    "S101",   # assert — pytest 测试中必用
    "S105",   # hardcoded password — test fixture 用占位 token
    "S106",   # hardcoded password in func arg — 同上
    "S108",   # probable temp file — tmp_path fixture
    "B008",   # do not perform function call in default arg — FastAPI Depends 模式
    # 中文全角标点: 项目注释/文档字符串使用中文，全角符号为正常书写，不视为错误
    "RUF001", # 字符串中的全角标点
    "RUF002", # docstring 中的全角标点
    "RUF003", # 注释中的全角标点
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",  # assert OK in tests
    "S105",  # hardcoded password placeholder OK in tests
    "S106",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── mypy ─────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
# src layout
mypy_path = "src"
# 排除 tests（允许 Any，test 本身不是生产代码）
exclude = ["tests/", "alembic/"]
# 忽略缺少类型存根的第三方库（部分库无 py.typed）
ignore_missing_imports = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
warn_return_any = true
no_implicit_reexport = true

# ── pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: 标记为慢速测试，CI 默认跳过",
    "e2e: 端到端测试，需要真实服务器",
    "integration: 集成测试（可能需要外部服务）",
]
# 默认排除 slow/e2e 标记（CI 用 -m 'not slow' 覆盖）
filterwarnings = [
    "ignore::DeprecationWarning:pydantic",
    "ignore::DeprecationWarning:apscheduler",
]
